@@ -25,6 +25,9 @@ fi
 if [ -x /usr/bin/osso-connectivity-ui.sh ]; then
   source /usr/bin/osso-connectivity-ui.sh stop
 fi
+if [ -x $DIR/osso-connectivity-ui.sh ]; then
+  source $DIR/osso-connectivity-ui.sh stop
+fi
 # this is first boot, so VKB is running
 if [ -f $DIR/keyboard.defs ]; then
   source $DIR/keyboard.defs
@@ -56,6 +59,9 @@ if [ -x $DIR/osso-media-server.sh ]; then
 fi
 if [ -x /usr/bin/osso-connectivity-ui.sh ]; then
   source /usr/bin/osso-connectivity-ui.sh start
+fi
+if [ -x $DIR/osso-connectivity-ui.sh ]; then
+  source $DIR/osso-connectivity-ui.sh start
 fi
 source $DIR/keyboard.sh start
 # give VKB some time to start
