@@ -3,6 +3,8 @@ osso-af-startup (1.16-1) unstable; urgency=low
   * UNRELEASED
   * Media server is now also restarted in USER state in the first boot
     (N#28935).
+  * Added support for new location of connectivity UI script (N#28264).
+  * Added support for automatic restore in first boot (N#28993).
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 09 May 2006 17:49:16 +0300
 
